Initial consent-ws package creation.
Also, updated the locator for the parent POM