@@ -1,7 +1,7 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
   <modelVersion>4.0.0</modelVersion>
-  <groupId>org.genomebridge.consent</groupId>
+  <groupId>org.genomebridge</groupId>
   <artifactId>consent-parent</artifactId>
   <version>0.1.0-SNAPSHOT</version>
   <packaging>pom</packaging>
@@ -14,6 +14,7 @@
     <lucene.version>4.9.0</lucene.version>
     <hsqldb.version>2.3.2</hsqldb.version>
     <liquibase.version>3.1.1</liquibase.version>
+	<dropwizard.version>0.7.1</dropwizard.version>
     <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
     <project.reporting.outputEncoding>UTF-8</project.reporting.outputEncoding>
   </properties>
@@ -21,11 +22,11 @@
   <modules>
     <module>consent-core</module>
     <module>consent-indexer</module>
+	<module>consent-ws</module>
     <module>consent-autocomplete</module>
   </modules>
 
   <build>
-    <finalName>consent-services</finalName>
 
     <plugins>
       <plugin>
@@ -38,38 +39,6 @@
 	</configuration>
       </plugin>
 
-      <plugin>
-	<groupId>org.apache.maven.plugins</groupId>
-	<artifactId>maven-surefire-plugin</artifactId>
-	<version>2.14</version>
-	<configuration>
-	  <excludes>
-	    <exclude>**/*IntegrationTest.java</exclude>
-	  </excludes>
-
-	  <argLine>-Xmx2g -XX:MaxPermSize=256m -Dsun.net.http.allowRestrictedHeaders=true</argLine>
-	</configuration>
-	<executions>
-	  <execution>
-	    <id>integration-test</id>
-	    <goals>
-	      <goal>test</goal>
-	    </goals>
-	    <phase>integration-test</phase>
-	    <configuration>
-	      <excludes>
-		<exclude>none</exclude>
-	      </excludes>
-	      <includes>
-		<include>**/*IntegrationTest.java</include>
-	      </includes>
-	      <argLine>-Xmx2g -XX:MaxPermSize=256m -Dsun.net.http.allowRestrictedHeaders=true</argLine>
-	      <forkCount>1</forkCount>
-	      <threadCount>1</threadCount>
-	    </configuration>
-	  </execution>
-	</executions>
-      </plugin>
     </plugins>
   </build>
 
@@ -84,7 +53,7 @@
       <dependency>
         <groupId>org.yaml</groupId>
         <artifactId>snakeyaml</artifactId>
-        <version>1.14-SNAPSHOT</version>
+        <version>1.13</version>
       </dependency>
 
       <!-- ElasticSearch -->
@@ -126,18 +95,74 @@
       </dependency>
 
       <!-- Testing -->
-      <dependency>
-	<groupId>org.testng</groupId>
-	<artifactId>testng</artifactId>
-	<version>6.3.1</version>
-	<scope>test</scope>
-      </dependency>
-      <dependency>
-	<groupId>org.mockito</groupId>
-	<artifactId>mockito-all</artifactId>
-	<version>1.9.5</version>
-	<scope>test</scope>
-      </dependency>
-    </dependencies>
+            <dependency>
+                <groupId>io.dropwizard</groupId>
+                <artifactId>dropwizard-core</artifactId>
+                <version>${dropwizard.version}</version>
+            </dependency>
+
+            <dependency>
+                <groupId>io.dropwizard</groupId>
+                <artifactId>dropwizard-assets</artifactId>
+                <version>${dropwizard.version}</version>
+            </dependency>
+
+            <dependency>
+                <groupId>io.dropwizard</groupId>
+                <artifactId>dropwizard-testing</artifactId>
+                <version>${dropwizard.version}</version>
+            </dependency>
+
+            <dependency>
+                <groupId>io.dropwizard</groupId>
+                <artifactId>dropwizard-logging</artifactId>
+                <version>${dropwizard.version}</version>
+            </dependency>
+
+            <dependency>
+                <groupId>io.dropwizard</groupId>
+                <artifactId>dropwizard-jdbi</artifactId>
+                <version>${dropwizard.version}</version>
+            </dependency>
+
+            <dependency>
+                <groupId>org.hsqldb</groupId>
+                <artifactId>hsqldb</artifactId>
+                <version>${hsqldb.version}</version>
+                <scope>test</scope>
+            </dependency>
+
+            <dependency>
+                <groupId>mysql</groupId>
+                <artifactId>mysql-connector-java</artifactId>
+                <version>5.1.31</version>
+            </dependency>
+
+            <dependency>
+                <groupId>io.dropwizard</groupId>
+                <artifactId>dropwizard-migrations</artifactId>
+                <version>${dropwizard.version}</version>
+            </dependency>
+
+            <dependency>
+                <groupId>com.sun.jersey</groupId>
+                <artifactId>jersey-client</artifactId>
+                <version>1.18.1</version>
+                <scope>test</scope>
+            </dependency>
+
+            <dependency>
+                <groupId>junit</groupId>
+                <artifactId>junit</artifactId>
+                <version>4.11</version>
+            </dependency>
+
+            <dependency>
+                <groupId>com.hubspot.dropwizard</groupId>
+                <artifactId>dropwizard-guice</artifactId>
+                <version>0.7.0.2</version>
+            </dependency>
+
+        </dependencies>
   </dependencyManagement>
 </project>
